--- a/fir-form.css
+++ b/fir-form.css
@@ -9,7 +9,7 @@ body {
     align-items: center;
     text-align: center;
     position:fixed;
-    bottom: 92.84%;
+    bottom: 92.99%;
     width: 100%;  
     left: 0; 
     right: 0;
@@ -22,10 +22,10 @@ form {
     width: 80%;
     max-width: 60%;
     margin: 70px auto 20px auto;
-    background-color: whitesmoke;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.447);
+    box-shadow: 0px 2px 8px rgba(0,0,0,0.08);
     /* box-sizing: border-box; */
 }
 #container label{
@@ -82,7 +82,7 @@ input[type="submit"] {
     background-color: #1e7fb2;
     font-weight: bold;
     color: #fff;
-    padding: 15px 19px;
+    padding: 15px 5px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
